# AliGn

./: .gitignore  README.md  pyproject.toml  requirements.txt
align/: __main__.py  align_settings.py  align_trace_data.py  batch_processing.py  custom_group_parameters.py  data_importer.py  gui.py  helpers.py  model.py  presenter.py
align/filter/: absolute_filter.py  bandpass_filter.py  bandstop_filter.py  fft_filter.py  filter.py  gaussian_filter.py  hanning_filter.py  highpass_filter.py  lowpass_filter.py  moving_average_filter.py  notch_filter.py  variance_filter.py
align/resources/: resources.py  resources.qrc
align/tools/: filter_frequency_response.py  frequency_analyzer.py
align/tracelib/: dsp.py  helperFunctions.py  traces.py
align/tracelib/ciphers/: aes.py  aesConstants.py
align/trigger/: _maxCorrelationTrigger.py  edge_trigger.py  find_peaks_trigger.py  holdoff.py  trigger.py
align/ui/: DialogOpenNpy.py  DialogOpenNpy.ui  ProcessSettingsFrame.ui  main_window.py  ui_ProcessSettingsFrame.py
demo/: correlation_attack.py  generate_traces.py  howto.md
tests/: test__d15_batch_processing_thread.py  test__npy_batch_processing_thread.py  test_align_settings.py  test_allign_trace_data.py  test_model.py
tests/resources/: align_settings.json  test_project_settings.json
tests/resources/testdata/npy/: key.npy  plaintext.npy
tests/resources/testdata/npy/processed_for_comparsion/: em_aligned.npy  plain_aligned.npy
